measurements loader development